--- a/.github/workflows/build-apk-xed-editor.yml
+++ b/.github/workflows/build-apk-xed-editor.yml
@@ -70,14 +70,11 @@ jobs:
           KEYSTORE_FILE: /tmp/xed.keystore
           SIGNING_PROPERTIES_FILE: /tmp/signing.properties
 
-      - name: Create github release & upload apk
-        uses: softprops/action-gh-release@master
+      - name: Erase keystore, encrypt package and create release
+        uses: ./ci-source/.github/actions/erase-aes256pac-release/
         with:
-          tag_name: ${{env.BUILD_DATE}}-xed-editor
-          files: release-apks/xed-editor-${{env.BUILD_DATE}}.apk
-          draft: false
-          prerelease: false
-          
-      - name: Delete secrets
-        if: always()
-        run: rm -f /tmp/xed.keystore /tmp/signing.properties
+          # 私钥文件路径（基于github.workspace的绝对路径）
+          P12_KEYSTORE_PATH: "./tmp/xed.keystore"
+          ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
+          BUILD_ARTIFACT_PATH: "./release-apks/xed-editor-${{env.BUILD_DATE}}.apk"
+          RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-xed-editor"
