--- a/.github/workflows/build-apk-acode.yml
+++ b/.github/workflows/build-apk-acode.yml
@@ -251,7 +251,7 @@ jobs:
         uses: ./ci-source/.github/actions/erase-aes256pac-release/
         with:
           # 私密文件路径（基于github.workspace的绝对路径）
-          P12_KEYSTORE_PATH: "${{ env.STORE_FILE_PATH }}" "${{ env.BUILD_JSON_PATH }}"
+          P12_KEYSTORE_PATH: "${{ env.STORE_FILE_PATH }} ${{ env.BUILD_JSON_PATH }}"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
           BUILD_ARTIFACT_PATH: "./tmp/acode-${{ env.BUILD_DATE }}.apk"
           RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-acode"
