--- a/.github/workflows/build-apk-materialfiles.yml
+++ b/.github/workflows/build-apk-materialfiles.yml
@@ -92,5 +92,5 @@ jobs:
         # 文件路径（基于github.workspace的绝对路径）
         P12_KEYSTORE_PATH: "./keystore.p12 ./signing.properties"
         ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
-        BUILD_ARTIFACT_PATH: "/materialfiles-${{ env.BUILD_DATE }}.apk"
-        RELEASE_TAG_NAME: "./${{ env.BUILD_DATE }}-materialfiles"
+        BUILD_ARTIFACT_PATH: "./materialfiles-${{ env.BUILD_DATE }}.apk"
+        RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-materialfiles"
