--- a/.github/actions/erase-aes256pac-release/action.yml
+++ b/.github/actions/erase-aes256pac-release/action.yml
@@ -82,4 +82,5 @@ runs:
         prerelease: false
         files: "${{ github.workspace }}/${{ inputs.BUILD_ARTIFACT_PATH }}.7z"
       run: |
+        pwd
         echo "${{ github.workspace }}/${{ inputs.BUILD_ARTIFACT_PATH }}.7z"
