--- a/.github/actions/erase-aes256pac-release/action.yml
+++ b/.github/actions/erase-aes256pac-release/action.yml
@@ -79,3 +79,25 @@ runs:
       run: |
         pwd
         echo "${{ github.workspace }}/${{ inputs.BUILD_ARTIFACT_PATH }}.7z"
+
+    - name: Find apk files and rename
+      working-directory: ./materialfiles-source
+      run: |
+        # 首先尝试在标准的release目录中查找
+        if [ -d "app/build/outputs/apk/release" ]; then
+          APK_PATH=$(find app/build/outputs/apk/release -name "*.apk" -type f | head -1)
+        else
+          # 如果标准目录不存在，则在整个项目中查找
+          APK_PATH=$(find . -name "*.apk" -type f | grep -i release | head -1)
+        fi
+        echo "apk file details:"
+        ls -la *.apk
+        mv "$APK_PATH" "./materialfiles-${{ env.BUILD_DATE }}.apk"
+
+    - name: Create github release
+      uses: softprops/action-gh-release@master
+      with:
+        tag_name: ${{ inputs.RELEASE_TAG_NAME }}
+        draft: false
+        prerelease: false
+        files: "${{ github.workspace }}/${{ inputs.BUILD_ARTIFACT_PATH }}.7z"
