--- a/.github/actions/erase-aes256pac-release/action.yml
+++ b/.github/actions/erase-aes256pac-release/action.yml
@@ -46,36 +46,45 @@ runs:
         sudo apt-get update -y
         sudo apt-get install -y --no-install-recommends p7zip-full
 
-    # - name: Create aes256 archive with filename encryption
-    #   shell: bash
-    #   working-directory: "${{ github.workspace }}"
-    #   run: |
-    #     set -e
-    #     pwd
-    #     # 打包并加密（参数说明：-mhe=on启用文件名加密，-mx=5中等压缩级别）
-    #     7z a \
-    #       -p"${{ inputs.ZIP_AES256_PWD }}" \
-    #       -mhe=on \
-    #       -t7z \
-    #       -m0=lzma2 \
-    #       -mx=5 \
-    #       -mfb=64 \
-    #       -md=32m \
-    #       -ms=on \
-    #       -mhc=on \
-    #       -ma=2 \
-    #       "${{ inputs.BUILD_ARTIFACT_PATH }}.7z" \
-    #       "${{ inputs.BUILD_ARTIFACT_PATH }}"
-    #     # 校验压缩包生成结果
-    #     if [ -f "${{ inputs.BUILD_ARTIFACT_PATH }}.7z" ]; then
-    #       echo "✅ 加密压缩包已生成：${{ inputs.BUILD_ARTIFACT_PATH }}.7z"
-    #     else
-    #       echo "❌ 压缩包生成失败"
-    #       exit 1
-    #     fi
+    - name: Create aes256 archive with filename encryption
+      shell: bash
+      working-directory: "${{ github.workspace }}"
+      run: |
+        set -e
+        pwd
+        # 打包并加密（参数说明：-mhe=on启用文件名加密，-mx=5中等压缩级别）
+        7z a \
+          -p"${{ inputs.ZIP_AES256_PWD }}" \
+          -mhe=on \
+          -t7z \
+          -m0=lzma2 \
+          -mx=5 \
+          -mfb=64 \
+          -md=32m \
+          -ms=on \
+          -mhc=on \
+          -ma=2 \
+          "${{ inputs.BUILD_ARTIFACT_PATH }}.7z" \
+          "${{ inputs.BUILD_ARTIFACT_PATH }}"
+        # 校验压缩包生成结果
+        if [ -f "${{ inputs.BUILD_ARTIFACT_PATH }}.7z" ]; then
+          echo "✅ 加密压缩包已生成：${{ inputs.BUILD_ARTIFACT_PATH }}.7z"
+        else
+          echo "❌ 压缩包生成失败"
+          exit 1
+        fi
 
     - name: Create github release
-      shell: bash
-      run: |
-        pwd
-        echo "${{ github.workspace }}/${{ inputs.BUILD_ARTIFACT_PATH }}.7z"
+      uses: softprops/action-gh-release@master
+      with:
+        tag_name: ${{ inputs.RELEASE_TAG_NAME }}
+        draft: false
+        prerelease: false
+        files: |
+          "${{ github.workspace }}/${{ inputs.BUILD_ARTIFACT_PATH }}.7z"
+
+    # - name: Create github release
+    #   shell: bash
+    #   run: |
+    #     pwd
+    #     echo "${{ github.workspace }}/${{ inputs.BUILD_ARTIFACT_PATH }}.7z"
