--- a/.github/workflows/build-apk-materialfiles.yml
+++ b/.github/workflows/build-apk-materialfiles.yml
@@ -68,7 +68,21 @@ jobs:
       working-directory: ./materialfiles-source
       run: |
         chmod +x ./gradlew
-        # ./gradlew assembleRelease
+        ./gradlew assembleRelease
+
+    - name: Find apk files and rename
+      working-directory: ./materialfiles-source
+      run: |
+        # 首先尝试在标准的release目录中查找
+        if [ -d "app/build/outputs/apk/release" ]; then
+          APK_PATH=$(find app/build/outputs/apk/release -name "*.apk" -type f | head -1)
+        else
+          # 如果标准目录不存在，则在整个项目中查找
+          APK_PATH=$(find . -name "*.apk" -type f | grep -i release | head -1)
+        fi
+        echo "apk file details:"
+        ls -la *.apk
+        mv "$APK_PATH" "./materialfiles-${{ env.BUILD_DATE }}.apk"
 
     - name: Erase keystore, encrypt package and create release
       uses: ./ci-source/.github/actions/erase-aes256pac-release/
