--- a/.github/workflows/build-apk-acode.yml
+++ b/.github/workflows/build-apk-acode.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Checkout ci source repo (self)
         uses: actions/checkout@main
         with:
-          path: ci-source
+          path: ci_source
 
       - name: Initialization values
         run: |
@@ -248,7 +248,7 @@ jobs:
           ls -la /tmp/acode-*
 
       - name: Erase keystore, encrypt package and create release
-        uses: ./ci-source/.github/actions/erase-aes256pac-release/
+        uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
           # 私密文件路径（基于github.workspace的绝对路径）
           P12_KEYSTORE_PATH: "${{ env.STORE_FILE_PATH }} ${{ env.BUILD_JSON_PATH }}"
