--- a/.github/workflows/android-build-ci-template.yml
+++ b/.github/workflows/android-build-ci-template.yml
@@ -89,7 +89,7 @@ jobs:
         run: ./gradlew assembleRelease
 
       - name: Erase keystore, encrypt package and create release
-        uses: ./ci-source/.github/actions/erase-aes256pac-release/
+        uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
           # 私钥文件路径（基于github.workspace的绝对路径）
           P12_KEYSTORE_PATH: "./xxx/keystore.p12"
