--- a/.github/workflows/build-apk-bggrgjqaubcoe-piliplus.yml
+++ b/.github/workflows/build-apk-bggrgjqaubcoe-piliplus.yml
@@ -23,12 +23,13 @@ jobs:
         with:
           repository: bggRGjQaUbCoE/PiliPlus
           ref: main
+          path: piliplus_source
           fetch-depth: 0
 
       - name: Checkout ci source repo (self)
         uses: actions/checkout@main
         with:
-          path: ci-source
+          path: ci_source
 
       - name: Initialization values
         run: |
@@ -61,6 +62,7 @@ jobs:
         continue-on-error: true
         
       - name: Decode and write keys
+        working-directory: ./piliplus_source
         run: |
           if [ ! -z "${{ secrets.KEYSTORE_BASE64 }}" ]; then
             echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > android/app/key.p12
@@ -71,23 +73,26 @@ jobs:
           fi
           
       - name: Set and extract version
+        working-directory: ./piliplus_source
         shell: pwsh
         run: lib/scripts/build.ps1 android
         
       - name: Flutter build release apk
+        working-directory: ./piliplus_source
         # run: flutter build apk --release --split-per-abi --dart-define-from-file=pili_release.json --pub
         # 改为仅编译arm64-v8a架构版本
         run: flutter build apk --release --target-platform=android-arm64 --split-per-abi --dart-define-from-file=pili_release.json --pub
         
       - name: Rename apk file
+        working-directory: ./piliplus_source
         run: |
-          mv "${{ github.workspace }}/build/app/outputs/flutter-apk/app-arm64-v8a-release.apk" "${{ github.workspace }}/build/app/outputs/flutter-apk/piliplus-${{ env.BUILD_DATE }}.apk"
+          mv "./build/app/outputs/flutter-apk/app-arm64-v8a-release.apk" "./build/app/outputs/flutter-apk/piliplus-${{ env.BUILD_DATE }}.apk"
         
       - name: Erase keystore, encrypt package and create release
-        uses: ./ci-source/.github/actions/erase-aes256pac-release/
+        uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
           # 私密文件路径（基于github.workspace的绝对路径）
-          P12_KEYSTORE_PATH: "/android/app/key.p12 /android/key.properties"
+          P12_KEYSTORE_PATH: "./piliplus_source/android/app/key.p12 ./piliplus_source/android/key.properties"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
-          BUILD_ARTIFACT_PATH: "/build/app/outputs/flutter-apk/piliplus-${{ env.BUILD_DATE }}.apk"
+          BUILD_ARTIFACT_PATH: "./piliplus_source/build/app/outputs/flutter-apk/piliplus-${{ env.BUILD_DATE }}.apk"
           RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-piliplus"
