--- a/.github/workflows/build-apk-xed-editor.yml
+++ b/.github/workflows/build-apk-xed-editor.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Checkout ci source repo (self)
         uses: actions/checkout@main
         with:
-          path: ci-source
+          path: ci_source
 
       - name: Initialization values
         run: |
@@ -76,7 +76,7 @@ jobs:
           SIGNING_PROPERTIES_FILE: /tmp/signing.properties
 
       - name: Erase keystore, encrypt package and create release
-        uses: ./ci-source/.github/actions/erase-aes256pac-release/
+        uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
           # 私钥文件路径（基于github.workspace的绝对路径）
           P12_KEYSTORE_PATH: "./tmp/xed.keystore"
