--- a/.github/workflows/build-apk-zipxtract.yml
+++ b/.github/workflows/build-apk-zipxtract.yml
@@ -31,7 +31,7 @@ jobs:
         uses: actions/checkout@main
         with:
           # 指定一个子目录放ci仓库，避免与源仓库混淆
-          path: ci-source
+          path: ci_source
 
       - name: Setup jdk
         uses: actions/setup-java@main
@@ -120,7 +120,7 @@ jobs:
           apksigner verify --verbose "$GITHUB_WORKSPACE/zipxtract_source/zipxtract-${{ env.BUILD_DATE }}.apk"
 
       - name: Erase keystore, encrypt package and create release
-        uses: ./ci-source/.github/actions/erase-aes256pac-release/
+        uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
           # 私钥文件路径（基于github.workspace的绝对路径）
           P12_KEYSTORE_PATH: "./zipxtract_source/keystore.p12"
