--- a/.github/workflows/build-apk-bggrgjqaubcoe-piliplus.yml
+++ b/.github/workflows/build-apk-bggrgjqaubcoe-piliplus.yml
@@ -53,7 +53,7 @@ jobs:
           # channel: beta # 更新周期1-2月
           # channel: dev # 更新周期1周
           # channel: master # 更新周期每天
-          flutter-version-file: pubspec.yaml
+          flutter-version-file: ./piliplus_source/pubspec.yaml
           cache: true
 
       - name: Apply bottom sheet patch
