--- a/.github/workflows/build-apk-materialfiles.yml
+++ b/.github/workflows/build-apk-materialfiles.yml
@@ -40,6 +40,11 @@ jobs:
         distribution: 'temurin'
         java-version: '21'
 
+      - name: Customize scripts
+        run: |
+          chmod +x $GITHUB_WORKSPACE/ci_source/scripts/customize-materialfiles.sh
+          $GITHUB_WORKSPACE/ci_source/scripts/customize-materialfiles.sh
+
     - name: Decode keystore and create signing.properties
       working-directory: ./materialfiles_source
       run: |
