--- a/.github/workflows/build-apk-xed-editor.yml
+++ b/.github/workflows/build-apk-xed-editor.yml
@@ -40,8 +40,9 @@ jobs:
           distribution: "temurin"
           cache: gradle
 
+      # app/build.gradle.kts中，硬编码了xed.keystore和signing.properties的路径
+      # "/tmp/signing.properties"和"/tmp/xed.keystore"
       - name: Decode and create secrets
-        working-directory: ./xed_editor_source
         run: |
           mkdir -p ./tmp
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > ./tmp/xed.keystore
@@ -56,8 +57,8 @@ jobs:
       - name: Build release apk files
         working-directory: ./xed_editor_source
         env:
-          KEYSTORE_FILE: ./xed_editor_source/tmp/xed.keystore
-          SIGNING_PROPERTIES_FILE: ./xed_editor_source/tmp/signing.properties
+          KEYSTORE_FILE: "${{ github.workspace }}/tmp/xed.keystore"
+          SIGNING_PROPERTIES_FILE: "${{ github.workspace }}/tmp/signing.properties"
         run: |
           chmod +x ./gradlew
           ./gradlew assembleRelease --no-daemon -Pandroid.ndk.abiFilters=arm64-v8a
@@ -68,7 +69,7 @@ jobs:
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
           # 文件路径为基于github.workspace的绝对路径
-          P12_KEYSTORE_PATH: "./xed_editor_source/tmp/xed.keystore ./xed_editor_source/tmp/signing.properties"
+          P12_KEYSTORE_PATH: "./tmp/xed.keystore ./tmp/signing.properties"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
           BUILD_ARTIFACT_PATH: "./xed_editor_source/release-apks/xed-editor-${{env.BUILD_DATE}}.apk"
           RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-xed-editor"
