--- a/.github/workflows/build-apk-acode.yml
+++ b/.github/workflows/build-apk-acode.yml
@@ -9,8 +9,8 @@ permissions:
 
 env:
   GITHUB_TOKEN: "${{secrets.GITHUB_TOKEN}}"
-  BUILD_JSON_PATH: "./build.json"
-  STORE_FILE_PATH: "./tmp/app-release.keystore"
+  BUILD_JSON_PATH: "/build.json"
+  STORE_FILE_PATH: "/tmp/app-release.keystore"
   KEYSTORE_PASSWORD: "${{secrets.KEYSTORE_PASSWORD}}"
   KEY_ALIAS: "${{secrets.KEY_ALIAS}}"
   KEY_PASSWORD: "${{secrets.KEY_PASSWORD}}"
@@ -85,10 +85,10 @@ jobs:
           node-version: 'lts/*'
 
       # app-release.keystore和build.json的路径都在构建文件中被硬编码了
-      # "./tmp/app-release.keystore" 和 "./build.json"
+      # "/tmp/app-release.keystore" 和 "/build.json"
       - name: Add keystore and build.json from secrets
         run: |
-          mkdir -p tmp
+          mkdir -p /tmp
           echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > "${{ env.STORE_FILE_PATH }}"
           echo "${{ secrets.ACODE_BUILD_JSON_CONTENT }}" | base64 -d > "${{ env.BUILD_JSON_PATH }}"
           echo "Keystore and build.json added successfully."
@@ -265,7 +265,7 @@ jobs:
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
           # 文件路径为基于github.workspace的绝对路径
-          P12_KEYSTORE_PATH: "./${{ env.STORE_FILE_PATH }} ./${{ env.BUILD_JSON_PATH }}"
+          P12_KEYSTORE_PATH: "${{ env.STORE_FILE_PATH }} ${{ env.BUILD_JSON_PATH }}"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
           BUILD_ARTIFACT_PATH: "./acode_source/tmp/acode-${{ env.BUILD_DATE }}.apk"
           RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-acode"
