--- a/.github/workflows/build-apk-fantasytyx-bv.yml
+++ b/.github/workflows/build-apk-fantasytyx-bv.yml
@@ -217,7 +217,7 @@ jobs:
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
           # 文件路径为基于github.workspace的绝对路径
-          P12_KEYSTORE_PATH: "./keystore.p12"
+          P12_KEYSTORE_PATH: "./fantasy-bv-source/keystore.p12 ./fantasy-bv-source/signing.properties"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
-          BUILD_ARTIFACT_PATH: "./app/build/outputs/apk/default/release/fantasybv-${{ env.BUILD_DATE }}.apk"
+          BUILD_ARTIFACT_PATH: "./fantasy-bv-source/app/build/outputs/apk/default/release/fantasybv-${{ env.BUILD_DATE }}.apk"
           RELEASE_TAG_NAME: "${{ env.BUILD_DATE }}-fantasybv"
